petclinic-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: petclinic-ingress
  namespace: spring-petclinic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: petclinic.kind.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
