prometheus-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.kind.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-kube-prometheus-stack-prometheus
            port:
              number: 9090
